--- a/test.html
+++ b/test.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<title>Test page</title>
+    <link rel="icon" href="cat.jpg"
+    <title>Test page</title>
     </head>
 <body>
 <h1>Heading <br/>one</h1>
