--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="icon" href="cat.jpg"
+    <link rel="icon" href="cat.jpg">
     <title>Test page</title>
     </head>
 <body>
