--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
     </head>
 <body>
 <h1>Heading <br/>one</h1>
-<p>Hey! This is a <a href="http://google.com">cool item.</a></p>
+<p>Hey! This is a <a href="http://google.com" target="_blank">cool item.</a></p>
 <p>There animals <strong>are</strong> <em>super</em> cute!</p>
 <img src="cat.jpg"/>
 <img src="https://hips.hearstapps.com/clv.h-cdn.co/assets/16/18/gettyimages-586890581.jpg?crop=0.668xw:1.00xh;0.219xw,0&resize=980:*">>
